--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "node": "^16.6.1",
+    "nodemon": "^2.0.12",
     "sequelize": "^6.6.5"
-  }
+  },
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "name": "club-app",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/iamChukka/club-app.git",
+  "author": "Chukwuka Eluchie <65169827+iamChukka@users.noreply.github.com>",
+  "license": "MIT"
 }
